<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_m_t"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_about"
        style="@style/Base.TextAppearance.AppCompat.Button.HomeButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_btn_margin"
        android:layout_marginTop="@dimen/title_m_t"
        android:layout_marginRight="@dimen/about_btn_margin"
        android:elevation="0.2dp"
        android:fontFamily="monospace"
        android:padding="@dimen/btn_padding"
        android:text="@string/about_alc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_btn_margin"
        android:layout_marginTop="44dp"
        android:layout_marginRight="@dimen/about_btn_margin"
        android:elevation="0.2dp"
        android:text="@string/my_profile"
        android:padding="@dimen/btn_padding"
        style="@style/Base.TextAppearance.AppCompat.Button.HomeButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />

</androidx.constraintlayout.widget.ConstraintLayout>